# aoc2022

./: .gitignore  .ocamlformat  README.md  dune-project
lib/: base.ml  day3.ml  day4.ml  day6.ml  day7.ml  day8.ml  dune
test/: benchmark_bitset.ml  common.ml  dune  test_aoc2022.ml  test_day3.ml  test_day6.ml  test_day8.ml
