(tests
 (names test_day3 test_day6 test_day8)
 (modules common test_day3 test_day6 test_day8)
 (libraries aoc2022 qcheck benchmark)
 (flags (:standard) -open Aoc2022 -open Aoc2022.Base))

(executable
 (name benchmark_bitset)
 (modules benchmark_bitset)
 (libraries aoc2022 benchmark)
 (flags (:standard) -open Aoc2022 -open Aoc2022.Base))
